# polizeischuesse.cilip.de

./: .editorconfig  .gitignore  .prettierignore  LICENSE.md  README.md  eslint.config.mjs  instrumentation-client.ts  instrumentation.ts  next.config.js  nginx.conf.sigil  package-lock.json  package.json  playwright.config.ts  sentry.properties  sentry.server.config.ts  skills-lock.json  theme.ts  tsconfig.json
.github/: dependabot.yml
.github/workflows/: deploy.yml  test.yml  update_data.yml
components/: AnchorHeading.tsx  Case.tsx  CaseList.tsx  CategoryInput.tsx  HeatMapChart.tsx  Layout.tsx  Map.tsx  NextLink.tsx  SearchInput.tsx  SelectInput.tsx  SortToggle.tsx  StatusBar.tsx  TimeChart.tsx  VisualizationCard.tsx  WeaponChart.tsx  charts.tsx
components/charts/: BeeswarmChart.tsx  ChartTooltip.tsx  charts.tsx  (+5 more)
data-wrangling/: 01_clean.ipynb  input.csv  output.csv  polizeitote.html  pyproject.toml
docs/: UI_DESIGN_GUIDE.md
e2e/: accessibility.spec.ts  data-accuracy.spec.ts  fixtures.ts  forms-and-apis.spec.ts  helpers.ts  individual-cases.spec.ts  map.spec.ts  pages.spec.ts  rss-feeds.spec.ts  search-and-filtering.spec.ts  visualizations.spec.ts
lib/: colors.ts  data.ts  geo.ts  util.ts
pages/: 404.tsx  _app.tsx  _document.tsx  _error.js  auswertung.tsx  daten.tsx  fall-melden.tsx  index.tsx  kontakt.tsx  methodik.tsx  sitemap.xml.ts  statistik.tsx  statistiken.tsx  taser.tsx  visualiserungen.tsx  visualisierungen.tsx
public/: data.csv  de_topo.json  official_statistics.csv  official_taser_statistics.csv  robots.txt  taser.csv
styles/: globals.css
(+27 files in other folders)
