[tool.poetry]
name = "data-wrangling"
version = "0.1.0"
description = ""
authors = ["Johannes Filter <hi@jfilter.de>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.3"
jupyterlab = "^3.1.14"
dateparser = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
