[tool.poetry]
name = "data-wrangling"
version = "0.1.0"
description = ""
authors = ["Johannes Filter <hi@jfilter.de>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2"
jupyterlab = "^4.3"
dateparser = "^1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
